# example_cmake_ctest

./: CMakeLists.txt  README.md  bootstrap.lua
tests/: CMakeLists.txt  test_a.c  test_b.c
